# takopi-ralph

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/tasks/: fix-ux-flow.md  python312-compatibility.md  ralph-status-enhancement.md
src/takopi_ralph/analysis/: analyzer.py  status_parser.py
src/takopi_ralph/clarify/: __init__.py  flow.py  llm_analyzer.py  prd_analyzer.py  prd_builder.py  prd_parser.py  prompt_loader.py  questions.py
src/takopi_ralph/clarify/templates/: ralph_status.md
src/takopi_ralph/command/: backend.py
src/takopi_ralph/command/handlers/: clarify.py  init.py  prd.py  reset.py  start.py  status.py  stop.py
src/takopi_ralph/engine/: backend.py  prompt_augmenter.py  runner.py
src/takopi_ralph/prd/: __init__.py  manager.py  schema.py
src/takopi_ralph/state/: __init__.py  models.py
src/takopi_ralph/templates/: RALPH_PROMPT.md  __init__.py
tests/: test_clarify_flow.py
